# Tri

./: .clang-format  TriApp.cpp  TriApp.hpp  TriFileUtils.cpp  TriFileUtils.hpp  TriGraphicsUtils.hpp  TriLog.cpp  TriLog.hpp  TriUtils.cpp  TriUtils.hpp  VkExtLibrary.cpp  VkExtLibrary.hpp  main.cpp  meson.build  meson.options
Shaders/: triangle.frag  triangle.vert
