option('vulkan_sdk_root',
       type : 'string',
       description : 'Vulkan SDK root directory path')

option('vulkan_force_disable_validation',
       type : 'boolean',
       description: 'Forcefully disable Vulkan validation layer (in debug mode)',
       value : false)

option('colored_log',
       type : 'boolean',
       description : 'Should be output logs be colored',
       value : true)
