option('vulkan_sdk_root',
       type: 'string',
       description: 'vulkan directory ending in arch')

option('vulkan_force_validation_layer',
       type: 'boolean',
       value: false,
       description: 'Force use validation layer (even if it\'s release)')

option('tri_colored_log',
       type: 'boolean',
       value: true,
       description: 'Use colored log')

